[package]
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"
name = "objekt-clonable"
version = "0.1.0"

[dependencies]
proc-macro2 = "0.4.24"
quote = "0.6.10"

[dependencies.syn]
features = ["full", "extra-traits"]
version = "0.15.18"

[dev-dependencies]
objekt = "0.1.1"

[lib]
proc-macro = true
