[package]
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"
name = "dyn-clonable-impl"
version = "0.9.0"
description = "Attribute wrapper for dyn-clone"
license = "MIT"
repository = "https://github.com/kardeiz/objekt-clonable"
readme = "../README.md"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"

[dependencies.syn]
features = ["full"]
version = "1.0"

[dev-dependencies]
dyn-clone = "1.0"

[lib]
proc-macro = true
