[package]
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"
name = "dyn-clonable"
version = "0.9.0"
description = "Attribute wrapper for dyn-clone"
license = "MIT"
repository = "https://github.com/kardeiz/objekt-clonable"
readme = "../README.md"

[dependencies]
dyn-clone = "1.0"

[dependencies.dyn-clonable-impl]
path = "../dyn-clonable-impl"
version = "0.9"
