[package]
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"
name = "objekt-clonable-impl"
version = "0.2.2"
description = "Attribute wrapper for dyn-clone"
license = "MIT"
repository = "https://github.com/kardeiz/objekt-clonable"
readme = "../README.md"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"

[dependencies.syn]
features = ["full", "extra-traits"]
version = "1.0"

[dev-dependencies]
dyn-clone = "1.0"

[lib]
proc-macro = true
