[package]
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"
name = "objekt-clonable"
version = "0.2.2"
description = "Attribute wrapper for objekt"
license = "MIT"
repository = "https://github.com/kardeiz/objekt-clonable"
readme = "../README.md"

[dependencies]
objekt = "0.1.2"

[dependencies.objekt-clonable-impl]
path = "../objekt-clonable-impl"
version = "0.2.2"