[package]
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"
name = "objekt-clonable"
version = "0.2.2"
description = "Attribute wrapper for dyn-clone"
license = "MIT"
repository = "https://github.com/kardeiz/objekt-clonable"
readme = "../README.md"

[dependencies]
dyn-clone = "1.0"

[dependencies.objekt-clonable-impl]
path = "../objekt-clonable-impl"
version = "0.2.2"
